--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 SECRET_KEY=sjnjsdsn5414513
-DATABASE_URL=mysql://root:rootnode@localhost:3306/chat_app
+DATABASE_URL=mysql://root:gVvrIQqarwqxJWMAMKDDgALyEYyoAtHX@mysql.railway.internal:3306/railway
 PORT=3000
